--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,132 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home-icon {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 80px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* HomePage.jsx */
+.ironcontent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ironbeer img {
+  height: 200px;
+  width: 1000px;
+}
+
+header {
+  display: flex;
+  height: 150px;
+  background-color: lightskyblue;
+  align-items: center;
+  justify-content: center;
+}
+
+/* ListBeers.jsx */
+.beers-map {
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.beer-contents {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 40px
+}
+
+.beers-map img {
+  height: 310px;
+  width: 120px;
+}
+
+.divider {
+  cursor: default
+}
+
+/* SingleBeer.jsx */ 
+.beer-and {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center
+}
+
+.single-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.single-content img {
+  align-self: center;
+  height: 700px;
+  width: 300px;
+  margin-top: 40px;
+  margin-bottom: 40px
+}
+
+.single-text {
+  margin-left: 40px;
+  font-size: 30px;
+  flex-direction: column;
+}
+
+/* RandomBeer.jsx */
+.random-beer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center
+}
+
+.random-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.random-content img {
+  align-self: center;
+  height: 600px;
+  width: 250px;
+  margin-top: 40px;
+  margin-bottom: 40px
+}
+
+.random-text {
+  display: flex;
+  text-align: center;
+  font-size: 30px;
+  flex-direction: column;
+}
+
+.random-text p {
+  width: 1400px;
+}
+
+/* NewBeer.jsx */
+label {
+  font-weight: bold
+}
+
+.remains {
+  text-align: center;
+  width: 1800px;
+  margin-bottom: 40px
+}
+.remains input {
+  margin-bottom: 20px;
+  border-radius: 20px;
+  height: 50px;
+  border-color: white;
+  border-style: ridge;
+}
+
+.new-content button {
+  height: 60px;
+  border-radius: 20px;
+  border-style: ridge;
+  border-style: none;
+  background-color: skyblue;
+  color: white;
+  font-size: 20px
 }
